--- a/app/css/app.css
+++ b/app/css/app.css
@@ -34,6 +34,7 @@ body {
   padding: 0;
   margin: 0;
 
+  font-family: ‘Metrophobic’, Arial, serif; font-weight: 400; 
 
   background: rgb(30,87,153); /* Old browsers */
   background: -moz-linear-gradient(left,  rgba(30,87,153,1) 21%, rgba(125,185,232,1) 82%); /* FF3.6+ */
@@ -101,4 +102,9 @@ li {
 
 .detals {
   width: 40%;
-  float:left;}
+  float:left;
+}
+
+.links {
+  text-align: center;
+}
